# lerobot-robot-franka-research3-dexhand

./: LICENSE  README.md  README.zh-CN.md  pyproject.toml
lerobot_robot_franka_research3_dexhand/: __init__.py  config_franka_research3_dexhand.py  franka_research3_dexhand.py
tests/: test_plugin.py
